Fix scrollbar in library menu.

--- a/kifi-backend/modules/shoebox/angular/src/layout/libraryMenu/libraryMenu.styl
+++ b/kifi-backend/modules/shoebox/angular/src/layout/libraryMenu/libraryMenu.styl
@@ -1,9 +1,8 @@
 .kf-library-menu
   position: fixed
-  left: 30px  // TODO(yiping): this should align to the menu toggle icon
   border: 1px solid #e6e6e6
   padding: 0 15px
-  width: 270px
+  width: 250px
   background: #fff
   box-shadow: 0 0 7px rgba(0, 40, 90, 0.2)
   z-index: 1
@@ -149,7 +148,7 @@
 
 .kf-scrollable-libs
   position: relative
-  width: calc(100% + 40px)
+  width: calc(100% + 15px)
 
   // This is a hack to hide the scrollbar
   // (cf. comments in scrollbar.js)
@@ -173,7 +172,7 @@
 
 .kf-lib-input-box
   height: 25px
-  width: calc(100% - 42px)
+  width: calc(100% - 30px)
   float: left
   margin-bottom: 8px
   box-sizing: border-box
@@ -232,7 +231,6 @@
   float: right
   width: 24px
   height: 25px
-  margin-right: 14px
   box-sizing: border-box
   border: 1px solid #e6e6e6
   border-radius: 0 4px 4px 0
